--- a/views/Update.ejs
+++ b/views/Update.ejs
@@ -62,7 +62,7 @@
                     <input type="text" id="item-details" placeholder="Option" name="item_details" value="<%= obj[0].item_details %>">
                 </div>
                 <input type="hidden" name="_id" value="<%= obj[0]._id %>">
-                <button class="upload-button" type="submit">Upload</button>
+                <button class="upload-button" type="submit">Update</button>
             </div>
             </form>
         </div>
