--- a/views/Update.ejs
+++ b/views/Update.ejs
@@ -29,7 +29,7 @@
             <p></p>
             <a href="/claim">CLAIM/REPORT LOST</a>
             <p></p>
-            <a href="/lostlist" >LOST LIST</a>
+            <a href="/lostlist" class="active">LOST LIST</a>
         </div>
         
         <div class="main-content">
