--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,7 +39,7 @@ body {
     display: flex;
     align-items: center;
 }
-
+/*logo reference linkhk*/
 .logo img {
     height: 40px;
     margin-right: 10px;
